# bevy_spacetimedb_wasm

./: .gitignore  BUG_FIX_SUBSCRIPTION_STATE.md  BUG_FIX_TABLE_EVENTS.md  CLAUDE.md  Cargo.toml  README.md  SQUATCH_SETUP.md  TESTING.md  example.html  flake.nix
bevy_spacetimedb/: Cargo.toml  README.md  build.rs  flake.nix  jwt-priv.key  jwt-pub.key  run_tests.sh  test_connection.js
bevy_spacetimedb/js/: BUILD.md  README.md  example.html  package-lock.json  package.json  spacetimedb-bridge.js  spacetimedb-bridge.ts  tsconfig.json
bevy_spacetimedb/src/: bridge.rs  channel_receiver.rs  events.rs  identity.rs  lib.rs  log_utils.rs  plugin.rs  reducers.rs  stdb_connection.rs  table_events.rs  tables.rs  test_bridge_loader.rs  test_helpers.rs
bevy_spacetimedb/tests/: README.md  bridge-entry.js  bridge-unit-tests.js  bridge_test.rs  build-bridge.js  channel_system_test.rs  check_test_module.js  connection_events_test.rs  debug_table_events.rs  error_handling_test.rs  identity_token_test.rs  integration_test.rs  manual_sdk_test.html  minimal_event_test.html  minimal_sdk_test.html  minimal_table_test.html  node_setup.js  package-lock.json  package.json  plugin_integration_test.rs  plugin_table_events_test.rs  publish_test_module.js  real_connection_test.rs.disabled  reducer_commands_test.rs.disabled  reducer_test.rs  run_browser_test.js  run_standalone_test.js  sdk_brotli_patch.js  setup_test_db.sh  spacetimedb-bridge.bundle.js  standalone_sdk_test.html  stdb_connection_test.rs  subscription_state_bug_test.rs  table_configuration_test.rs  table_events_test.rs  test.html  (+5 more)
(+4 files in other folders)
