[package]
name = "bevy_spacetimedb_wasm"
description = "WASM-only SpacetimeDB integration for Bevy using TypeScript SDK bridge"
repository = "https://github.com/Mortoc/bevy_spacetimedb_wasm"
readme = "../README.md"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
]
